Added second adapter;changed viewModel;changed way to pass data

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp"
-        tools:context=".register.RegisterFragment"
+        tools:context=".registration.RegisterFragment"
         android:orientation="vertical">
 
         <FrameLayout
